fix horizontal scroll

--- a/src/app/pages/navigation/navigation.component.scss
+++ b/src/app/pages/navigation/navigation.component.scss
@@ -5,7 +5,7 @@
   justify-content: flex-start;
   align-items: center;
   min-height: 400px;
-  width: 100%;
+  max-width: 100%;
   font-size: map-get($font-size, x-medium);
   padding: map-get($spacing, x-large) 0 0 0;
 
